--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 		                                </div>
 		                                <h4 class="feature-title m-0">Software Developments</h4>
 									</div>
-	                                <p class="text-sm mb-0">Transform your business with our game-changing IT solutions and software development services. Whether you need to modernize your legacy systems, build custom software, or optimize your IT infrastructure, our team of experts is here to help. We leverage the latest technologies and best practices to deliver innovative solutions that streamline your operations, improve efficiency, and drive growth. Our software development services include mobile app development, web development, e-commerce, blockchain, and more.</p>
+	                                <p class="text-sm mb-0">Transform your business with our game-changing IT solutions and software development services. Our software development services include mobile app development, web development, e-commerce, blockchain, and more.</p>
 	                            </div>
 	                        </div>
 							<div class="feature">
@@ -370,7 +370,7 @@
 		                                </div>
 		                                <h4 class="feature-title m-0">Cloud Service Provider</h4>
 									</div>
-	                                <p class="text-sm mb-0">Unlock the limitless potential of the cloud with our one-stop cloud services. As a premier consulting partner of various Cloud providers, we offer comprehensive cloud solutions tailored to your unique business needs. Our services include cloud migration, infrastructure management, application development, network security, and more. With our team of certified experts, you can rest assured that you're getting world-class cloud services that deliver top-notch security, unmatched scalability, and cost-effective solutions.</p>
+	                                <p class="text-sm mb-0">Unlock the limitless potential of the cloud with our one-stop cloud services. With our team of certified experts, you can rest assured that you're getting world-class cloud services that deliver top-notch security, unmatched scalability, and cost-effective solutions.</p>
 	                            </div>
 	                        </div>
 							<div class="feature">
@@ -389,7 +389,7 @@
 		                                </div>
 		                                <h4 class="feature-title m-0">Support</h4>
 									</div>
-	                                <p class="text-sm mb-0">Focus on your business while we take care of your cloud and software support needs. Our comprehensive support services are designed to ensure that your cloud and software infrastructure run smoothly, securely, and efficiently. Whether you need 24/7 monitoring and maintenance, troubleshooting, upgrades, or customizations, our team of certified experts is here to help. With our top-notch support services, you can enjoy peace of mind knowing that your business-critical applications and data are in good hands.</p>
+	                                <p class="text-sm mb-0">Focus on your business while we take care of your cloud and software support needs. With our top-notch support services, you can enjoy peace of mind knowing that your business-critical applications and data are in good hands.</p>
 									
 	                            </div>
 	                        </div>
