Updated contact info

--- a/Sample2/index.html
+++ b/Sample2/index.html
@@ -916,7 +916,7 @@
             <div class="info">
               <div>
                 <i class="ri-map-pin-line"></i>
-                <p>A108 Adam Street<br>New York, NY 535022</p>
+                <p>No. 27 (2nd Floor)<br> Jalan Lembah Permai<br> Taman Lembah Permai<br> 14000 Bukit Mertajam<br> Penang </p>
               </div>
 
               <div>
@@ -926,7 +926,7 @@
 
               <div>
                 <i class="ri-phone-line"></i>
-                <p>+1 5589 55488 55s</p>
+                <p>+60 178864426</p>
               </div>
 
             </div>
