--- a/Sample2/index.html
+++ b/Sample2/index.html
@@ -99,6 +99,7 @@
   <main id="main">
 
     <!-- ======= Clients Section ======= -->
+    <!--
     <section id="clients" class="clients clients">
       <div class="container">
 
@@ -131,7 +132,7 @@
         </div>
 
       </div>
-    </section><!-- End Clients Section -->
+    </section>--><!-- End Clients Section -->
 
     <!-- ======= About Us Section ======= -->
     <section id="about" class="about">
