--- a/Sample2/index.html
+++ b/Sample2/index.html
@@ -96,8 +96,8 @@
 
   </section><!-- End Hero -->
 
-  <main id="main">
-
+  <!--<main id="main">
+  -->
     <!-- ======= Clients Section ======= -->
     <!--
     <section id="clients" class="clients clients">
