Removed portfolio section

--- a/Sample2/index.html
+++ b/Sample2/index.html
@@ -405,7 +405,7 @@
     <!-- End Features Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    <!--<section id="portfolio" class="portfolio">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
@@ -555,7 +555,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>--><!-- End Portfolio Section -->
 
     <!-- ======= Team Section ======= -->
     <!-- Disabled
