Removed contact form and added whatsapp link

--- a/Sample2/index.html
+++ b/Sample2/index.html
@@ -826,13 +826,14 @@
 
               <div>
                 <i class="ri-phone-line"></i>
-                <p>+60 178864426</p>
+                <p><a href="https://wa.me/60178864426">+60 178864426</a></p>
               </div>
 
             </div>
           </div>
 
-          <div class="col-lg-5 col-md-12" data-aos="fade-up" data-aos-delay="300">
+          <!--
+            <div class="col-lg-5 col-md-12" data-aos="fade-up" data-aos-delay="300">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -858,7 +859,7 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>--><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
