--- a/Sample2/index.html
+++ b/Sample2/index.html
@@ -832,9 +832,9 @@
             </div>
           </div>
 
+          
             <div class="col-lg-5 col-md-12" data-aos="fade-up" data-aos-delay="300">
-            <!--
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <!--<form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
               </div>
@@ -853,8 +853,7 @@
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
-            </form> -->
-
+            </form>-->
             <script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js"></script>
             <script>
               hbspt.forms.create({
@@ -863,8 +862,6 @@
                 formId: "560b45ab-2180-4cd0-a77e-b719d3180fd8"
               });
             </script>
-
-
           </div>
 
         </div>
