added page about product details

--- a/Sample2/index.html
+++ b/Sample2/index.html
@@ -44,29 +44,26 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto " href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <!--<li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>-->
-          <!--<li><a class="nav-link scrollto" href="#team">Team</a></li>-->
-          <!--<li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>-->
-          <!--<li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="wedo.html"><span>What We Do</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+              <li class="dropdown"><a href="#"><span>IaaS</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
+                  <li><a href="wedo.html">Compute</a></li>
+                  <li><a href="wedo.html">Networking</a></li>
+                  <li><a href="wedo.html">Storage</a></li>
+                  <li><a href="wedo.html">Database</a></li>
+                  <li><a href="wedo.html">CDN</a></li>
+                  <li><a href="wedo.html">Blockchain</a></li>
                 </ul>
               </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="#">Designs</a></li>
+              <li><a href="#">Software Development</a></li>
+              <li><a href="#">Business Consultancy</a></li>
             </ul>
-          </li>-->
+          </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
         </ul>
